# eyelab

./: .gitignore  CHANGELOG.md  CITATION.cff  README.md  pyproject.toml
.github/workflows/: ci.yaml
eyelab/: __init__.py  config.py  main.py  oatmain.py
eyelab/commands/: __init__.py  layeritem.py  thin_out.py
eyelab/dialogs/: __init__.py  addannotation.py  addcollection.py  adddataset.py  addpatient.py  datasetmanager.py  essentials.py  login.py  upload.py
eyelab/dialogs/help/: __init__.py  areaannotation_help.py  help_dialog.py  introduction_help.py  layerannotation_help.py  registration_help.py  shortcut_help.py
eyelab/models/: __init__.py  layereditor.py  scene.py  treeitemdelegate.py  utils.py  viewtab.py
eyelab/models/treeview/: areaitem.py  itemgroup.py  itemmodel.py  layeritem.py  lineitem.py  treegraphicsitem.py
eyelab/tools/: __init__.py  fillsame.py  inspection.py  pen.py  splinetool.py  template.py
eyelab/views/: compile_resource.sh  compile_views.sh  data_view.py  enface_view.py  graphicsview.py  volume_view.py  workspace.py
eyelab/views/ui/: resources.qrc  resources_rc.py  ui_2d_viewer.py  ui_2d_viewer.ui  ui_3d_viewer.py  ui_3d_viewer.ui  ui_add_annotation_dialog.py  ui_add_annotation_dialog.ui  ui_data_view.py  ui_data_view.ui  ui_layer_entry.py  ui_layer_entry.ui  ui_layergroup_entry.py  ui_layergroup_entry.ui  ui_main_window.py  ui_main_window.ui  ui_notification_diaolog.py  ui_notification_diaolog.ui  ui_pen_options.py  ui_pen_options.ui  ui_proceed_diaolog.py  ui_proceed_diaolog.ui  ui_scene_tab.py  ui_scene_tab.ui  ui_spline_options.py  ui_spline_options.ui  ui_text_window.py  ui_text_window.ui  ui_volumelocalizer_view.py  ui_volumelocalizer_view.ui  ui_workspace_view.py  ui_workspace_view.ui
tests/: test_eyelab.py
