[tool.poetry]
name = "eyelab"
version = "0.1.0"
description = "Multi-modal annotation tool for eye imaging data"
authors = ["Olivier Morelle <oli4morelle@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
PySide6 = "^6.2.2"
qimage2ndarray = "1.9.0"
scikit-image = "^0.19.1"
eyepie = "^0.6.1"

[tool.poetry.dev-dependencies]
pyinstaller = "^4.8"
pytest = "^6.2.5"
pre-commit = "^2.17.0"
commitizen = "^2.20.4"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "$version"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
