[tool.poetry]
name = "eyelab"
version = "0.4.0"
description = "Multi-modal annotation tool for eye imaging data"
authors = ["Olivier Morelle <oli4morelle@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
qimage2ndarray = "1.9.0"
scikit-image = "^0.19.1"
eyepie = "^0.6.7" #{ path = "../eyepy/", develop = true } #
requests = "^2.27.1"
PySide6 = "6.1.3"

[tool.poetry.dev-dependencies]
pyinstaller = "^4.8"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
pre-commit = "^2.17.0"
commitizen = "^2.20.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
major_on_zero = false
version_variable = ['eyelab/__init__.py:__version__']
version_toml = "pyproject.toml:tool.poetry.version"
version_pattern = ["CITATION.cff:v(\\d+\\.\\d+\\.\\d+)", "README.md:v(\\d+\\.\\d+\\.\\d+)"]
upload_to_pypi = true
upload_to_release = true
build_command = "pip install poetry && poetry build"
branch = "main"
